Fixing bug with z-index for side menu and mobile btn

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -79,6 +79,7 @@ textarea
   position: fixed
   top: 10px
   right: 10px
+  z-index: 999
   padding: 10px
   border-radius: 50%
   span
