--- a/app/assets/stylesheets/side_menu.sass
+++ b/app/assets/stylesheets/side_menu.sass
@@ -6,6 +6,8 @@ aside
   max-width: 190px
   min-width: 200px
   min-height: 100%
+  position: fixed
+  z-index: 999
   h4
     font-size: 15pt
     font-weight: bold
